# enigma2-pliplugins

./: Makefile.am  Rules-po.mak  configure.ac
Extensions/: Makefile.am
Extensions/OpenUitzendingGemist/: Makefile.am  plugin.py
Extensions/UShare/: Makefile.am  plugin.py
PLi/: Makefile.am
PLi/NewsReader/data/: feeds.xml.default
PLi/SnmpAgent/: Makefile.am  disk.py  plugin.py
PLi/SoftcamSetup/po/: Makefile.am  SoftcamSetup.pot  cs.po  de.po  el.po  et.po  fa.po  fi.po  fr.po  hu.po  lt.po  nl.po  no.po  pl.po  pt_BR.po  ru.po  sl.po  sv.po  tr.po  uk.po
PLi/SoftcamSetup/src/: Makefile.am  Sc.py  SoftcamSetup.py  plugin.py
